--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             'chatConfirmButtonFontFamily': 'Roboto-Regular',
             'chatConfirmButtonFontSize': '14px',
             'chatConfirmButtonFontColor': '#FFFFFF',
-            'chatConfirmButtonBackgroundColor': '#3E048B',
+            'chatConfirmButtonBackgroundColor': '#194892',
             'chatCancelButtonFontFamily': 'Roboto-Regular',
             'chatCancelButtonFontSize': '14px',
             'chatCancelButtonFontColor': '#F2F4F5',
