--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Talkdesk Demo Page</title>
 </head>
-<body><img src="https://amazon-connect-5e6cf7e32d6e.s3.us-west-2.amazonaws.com/Experian/experianpage.png">
+<body><img src="https://amazon-connect-5e6cf7e32d6e.s3.us-west-2.amazonaws.com/Experian/experianpage.png" class="responsive">
 
     <!-- Start of Talkdesk Code -->
     <script>
