--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Talkdesk Demo Page</title>
+  <title>Experian</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body><img src="https://amazon-connect-5e6cf7e32d6e.s3.us-west-2.amazonaws.com/Experian/experianpage.png" class="responsive">
 
