--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
             /* Widget launcher */
             'chatThemeColor': '#FFFFFF',
             'chatHoverThemeColor': '#FFFFFF',
-            'https://amazon-connect-5e6cf7e32d6e.s3.us-west-2.amazonaws.com/Experian/Experian-Logo.png':
-            'Experian-Logo.png',
+            'chatIcon':'https://amazon-connect-5e6cf7e32d6e.s3.us-west-2.amazonaws.com/Experian/Experian-Logo.png',
             'triggerButtonHeight': '70px',
             'triggerButtonWidth': '70px',
             'triggerButtonPositionRight': null,
