--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Experian</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body><img src="https://amazon-connect-5e6cf7e32d6e.s3.us-west-2.amazonaws.com/Experian/experianpage.png" class="responsive">
+<body><img src="https://amazon-connect-5e6cf7e32d6e.s3.us-west-2.amazonaws.com/WaFed/wafedwebsite.png" class="responsive">
 
     <!-- Start of Talkdesk Code -->
     <script>
@@ -58,14 +58,14 @@
             /* Widget launcher */
             'chatThemeColor': '#FFFFFF',
             'chatHoverThemeColor': '#FFFFFF',
-            'chatIcon':'https://amazon-connect-5e6cf7e32d6e.s3.us-west-2.amazonaws.com/Experian/Experian-Logo.png',
+            'chatIcon':'https://amazon-connect-5e6cf7e32d6e.s3.us-west-2.amazonaws.com/WaFed/wafd+logo%2C+square.png',
             'triggerButtonHeight': '70px',
             'triggerButtonWidth': '70px',
             'triggerButtonPositionRight': null,
             'triggerButtonPositionBottom': null,
             /* Widget header */
             'chatTitleIcon':
-            'https://amazon-connect-5e6cf7e32d6e.s3.us-west-2.amazonaws.com/Experian/Experian_logo.wide.png',
+            'https://amazon-connect-5e6cf7e32d6e.s3.us-west-2.amazonaws.com/WaFed/wafd+logo%2C+wide.png',
             'chatTitleIconHeight': '60px',
             'chatTitleIconWidth': '100px',
             <!-- Removal of 'chatTitle': 'Talkdesk Chat', -->
@@ -73,8 +73,8 @@
             'chatTitleTextColor': null,
             'chatSubtitle': '',
             'chatSubtitleTextColor': null,
-            'chatMinimizeButtonColor': '#6C217C',
-            'chatCloseButtonColor': '#6C217C',
+            'chatMinimizeButtonColor': '#4E5759',
+            'chatCloseButtonColor': '#4E5759',
             /* Widget window */
             'chatContainerWidth': null,
             'chatContainerHeight': null,
@@ -90,15 +90,15 @@
             /* Initial screen - Custom message */
             'customMessageNoBubbleFontFamily': 'Roboto-Regular',
             'customMessageNoBubbleFontSize': '14px',
-            'customMessageNoBubbleColor': '#194892',
+            'customMessageNoBubbleColor': '#009928',
             'customMessageBackgroundColor': '#F2F4F5',
             'customMessageFontFamily': 'Roboto-Regular',
             'customMessageFontSize': '14px',
-            'customMessageColor': '#194892',
+            'customMessageColor': '#009928',
             /* Initial screen - Custom field */
             'customFieldLabelFontFamily': 'Roboto-Regular',
             'customFieldLabelFontSize': '14px',
-            'customFieldLabelColor': '#194892',
+            'customFieldLabelColor': '#009928',
             'customFieldInputFontFamily': 'Roboto-Regular',
             'customFieldInputFontSize': null,
             'customFieldInputColor': '#202830',
@@ -116,13 +116,13 @@
             /* Initial screen - Custom button */
             'customButtonFontFamily': 'Roboto-Regular',
             'customButtonFontSize': '14px',
-            'customButtonColor': '#194892',
+            'customButtonColor': '#009928',
             'customButtonBackgroundColor': '#FFFFFF',
-            'customButtonBorderColor': '#194892',
+            'customButtonBorderColor': '#009928',
             'customButtonHeight': '32px',
             /* Chat screen */
             'userTextColor': '#FFFFFF',
-            'userBackgroundColor': '#194892',
+            'userBackgroundColor': '#009928',
             'userAnchorTextColor': '#E1CCFE',
             'userAnchorTextColorVisited': '#B681FC',
             'botTextColor': '#000000',
@@ -135,7 +135,7 @@
             'avatarBorderColor': '#EDF4FC',
             'botIconHeight': '32px',
             'botIconWidth': '32px',
-            'botIcon': 'https://amazon-connect-5e6cf7e32d6e.s3.us-west-2.amazonaws.com/Experian/Experian-Logo.png',
+            'botIcon': 'https://amazon-connect-5e6cf7e32d6e.s3.us-west-2.amazonaws.com/WaFed/wafd+logo%2C+square.png',
             'userInputSeparatorColor': '#DFDFDF',
             'userInputHeight': '20px',
             'chatPlaceholder': 'Type a message...',
@@ -147,7 +147,7 @@
             'chatConfirmButtonFontFamily': 'Roboto-Regular',
             'chatConfirmButtonFontSize': '14px',
             'chatConfirmButtonFontColor': '#FFFFFF',
-            'chatConfirmButtonBackgroundColor': '#194892',
+            'chatConfirmButtonBackgroundColor': '#009928',
             'chatCancelButtonFontFamily': 'Roboto-Regular',
             'chatCancelButtonFontSize': '14px',
             'chatCancelButtonFontColor': '#F2F4F5',
@@ -162,10 +162,10 @@
             /* Ended chat screen */
             'endedChatMessage': 'This chat has ended',
             'startChatButtonTextColor': '#FFFFFF',
-            'startChatButtonBackgroundColor': '#194892',
+            'startChatButtonBackgroundColor': '#009928',
             'startChatButtonBorderColor': '#1E0044',
             'startChatButtonHoverTextColor': '#FFFFFF',
-            'startChatButtonHoverBackgroundColor': '#6C217C',
+            'startChatButtonHoverBackgroundColor': '#4E5759',
             'startChatButtonHoverBorderColor': '#1E0044',
             'startChatButtonLabel': 'Start new chat',
             /* Virtual agent */
